--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'net.sideways_sky'
-version = '1.0-SNAPSHOT'
+version = '0.2'
 
 repositories {
     mavenCentral()
@@ -48,7 +48,7 @@ tasks {
         // Configure the Minecraft version for our task.
         // This is the only required configuration besides applying the plugin.
         // Your plugin's jar (or shadowJar if present) will be used automatically.
-        minecraftVersion("1.20.2")
+        minecraftVersion("1.20.4")
     }
 }
 
