--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,10 +2,4 @@ name: Tool-Trims
 version: '${version}'
 main: net.sideways_sky.tooltrims.Tool_Trims
 api-version: '1.20'
-commands:
-  givetooltrimitems:
-    description: Gives player all Tool Trim Templates
-    usage: /givetooltrimitems
-    permission: tool-trims.givetrims
-softdepend:
-  - Geyser
+softdepend: ["Geyser-Spigot"]
