--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
-    id("xyz.jpenilla.run-paper") version "2.2.0"
+    id("xyz.jpenilla.run-paper") version "2.3.0"
+    id("io.papermc.paperweight.userdev") version "1.7.1"
 }
 
 group = 'net.sideways_sky'
-version = '1.0'
+version = '1.1'
 
 repositories {
     mavenCentral()
@@ -23,11 +24,11 @@ repositories {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.20.2-R0.1-SNAPSHOT"
+    paperweight.paperDevBundle("1.20.6-R0.1-SNAPSHOT")
     compileOnly 'org.geysermc.geyser:api:2.2.0-SNAPSHOT'
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 21
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -44,11 +45,14 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks {
+    assemble {
+        dependsOn(reobfJar)
+    }
     runServer {
         // Configure the Minecraft version for our task.
         // This is the only required configuration besides applying the plugin.
         // Your plugin's jar (or shadowJar if present) will be used automatically.
-        minecraftVersion("1.20.4")
+        minecraftVersion("1.20.6")
     }
 }
 
